Refine spectrograph visualization, optimize performance, organize medical/device packages, and enhance simulated devices